# cadoku

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  justfile
assets/: main.css
docs/: 404.html  cached_asset_list.js  index.html  sw.js
docs/assets/: 0-68a74fce259332a1.avif.br  1-99365fe5efa41cc9.avif  1-99365fe5efa41cc9.avif.br  2-07f348f924a2a4c8.avif.br  3-358e63de570efccb.avif  4-8c4ab2d29126fe2f.avif  4-8c4ab2d29126fe2f.avif.br  5-14e942e8ed2cce37.avif  5-14e942e8ed2cce37.avif.br  6-4cf0492d32234933.avif.br  8-a542e42ec631dd4d.avif.br  9-35e905dea6c50703.avif  Mooli-cd77459f196e5305.ttf.br  cadoku-bda12f260fd53d56.js  cadoku-bda12f260fd53d56.js.br  cadoku-d88716d93bd8c340.js.br  cadoku_bg-03bed58a541c976f.wasm  cadoku_bg-03bed58a541c976f.wasm.br  cadoku_bg-2aeba8e971b4ab21.wasm  cadoku_bg-2aeba8e971b4ab21.wasm.br  cadoku_bg-55ae23c3c4bee61d.wasm  cadoku_bg-55ae23c3c4bee61d.wasm.br  cadoku_bg-a98c7469444242d6.wasm  cadoku_bg-a98c7469444242d6.wasm.br  challenge-502fa3e987a722ce.avif  challenge-502fa3e987a722ce.avif.br  easy-5952d7c9849f11c0.avif  favicon-1850237cac6c2879.ico.br  firework-008833342ca8a869.avif  firework-008833342ca8a869.avif.br  happy-67ece4d43ab76fdb.avif  hard-3577eb93fd4d7d53.avif  hearts-d5fcecd9be6ef3a3.avif.br  main-0d40693495b7bae6.css  main-0d40693495b7bae6.css.br  main-ef1c05f550cc6af0.css  main-ef1c05f550cc6af0.css.br  mascot-ea1fad3535b86371.avif.br  medium-90e9017b98af726b.avif  medium-90e9017b98af726b.avif.br  (+1 more)
public/: cached_asset_list.js  manifest.json  sw.js
src/: cat.rs  constants.rs  main.rs  sudoku.rs
(+27 files in other folders)
