[package]
name = "cadoku"
version = "0.1.0"
authors = ["Julian Karrer"]
edition = "2021"
publish = false

[dependencies]
dioxus = { version = "0.6.3", features = ["web"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
